--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 <body>
 
     <nav>
-        <div class="logo">M. Shadab</div>
+        <div class="logo">Shadab</div>
         <div class="nav-links">
             <a href="#about">About</a>
             <a href="#experience">Experience</a>
             <a href="#skills">Skills</a>
             <a href="#education">Education</a>
-            <a href="#contact" class="contact-btn">Hire Me</a>
+            <a href="#contact" class="contact-btn">Contacts</a>
         </div>
     </nav>
 
